# dns-resolver

./: Cargo.toml  README.md
src/: lib.rs
