[package]
name = "hostname_resolver"
version = "0.1.0"
authors = ["Claus Guttesen <kometen@gmail.com>"]
description = "Validate hostname"
license = "MIT"
repository = "https://github.com/kometen/hostname-resolver"
documentation = "https://github.com/kometen/hostname-resolver"
readme = "README.md"
keywords = ["network", "dns"]
categories = ["config"]
edition = "2021"

[dependencies]
anyhow = "1.0"
azure_vault_secrets = "0.1.2"
db_config = "0.1.1"
hickory-resolver = "0.24"
serde = { version = "1.0", features = ["derive"] }
